--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,11 @@
 		<!-- junit版本 -->
 		<junit.version>4.12</junit.version>
 		<!-- spring版本 -->
-        <spring.version>4.2.3.RELEASE</spring.version>
-        <!-- jackson版本 -->
-        <jackson.version>2.6.3</jackson.version>
+		<spring.version>4.2.3.RELEASE</spring.version>
+		<!-- jackson版本 -->
+		<jackson.version>2.6.3</jackson.version>
+		<!-- log4j版本 -->
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencies>
 		<!-- junit单元测试 -->
@@ -32,29 +34,36 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- spring-webmvc -->
-        <!-- spring-webmvc-4.2.3.RELEASE.jar -->
-        <!-- spring-beans-4.2.3.RELEASE.jar -->
-        <!-- spring-context-4.2.3.RELEASE.jar -->
-        <!-- spring-aop-4.2.3.RELEASE.jar -->
-        <!-- aopalliance-1.0.jar -->
-        <!-- spring-core-4.2.3.RELEASE.jar -->
-        <!-- commons-logging-1.2.jar -->
-        <!-- spring-expression-4.2.3.RELEASE.jar -->
-        <!-- spring-web-4.2.3.RELEASE.jar -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <!-- jackson-databind -->
-        <!-- jackson-databind-2.6.3.jar -->
-        <!-- jackson-annotations-2.6.0.jar -->
-        <!-- jackson-core-2.6.3.jar -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
+		<!-- spring-webmvc-4.2.3.RELEASE.jar -->
+		<!-- spring-beans-4.2.3.RELEASE.jar -->
+		<!-- spring-context-4.2.3.RELEASE.jar -->
+		<!-- spring-aop-4.2.3.RELEASE.jar -->
+		<!-- aopalliance-1.0.jar -->
+		<!-- spring-core-4.2.3.RELEASE.jar -->
+		<!-- commons-logging-1.2.jar -->
+		<!-- spring-expression-4.2.3.RELEASE.jar -->
+		<!-- spring-web-4.2.3.RELEASE.jar -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!-- jackson-databind -->
+		<!-- jackson-databind-2.6.3.jar -->
+		<!-- jackson-annotations-2.6.0.jar -->
+		<!-- jackson-core-2.6.3.jar -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<!-- log4j -->
+		<!-- log4j-1.2.17.jar -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- 解决eclipse升级报错 -->
