--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 		<jackson.version>2.6.3</jackson.version>
 		<!-- log4j版本 -->
 		<log4j.version>1.2.17</log4j.version>
+		<!-- aspectjweaver版本 -->
+        <aspectjweaver.version>1.8.7</aspectjweaver.version>
+        <!-- servlet-api版本 -->
+        <servlet-api.version>2.5</servlet-api.version>
 	</properties>
 	<dependencies>
 		<!-- junit单元测试 -->
@@ -64,6 +68,20 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		<!-- aspectjweaver -->
+        <!-- aspectjweaver-1.8.7.jar -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
+        <!-- servlet-api -->
+        <!-- servlet-api-2.5.jar -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<!-- 解决eclipse升级报错 -->
