--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
         <aspectjweaver.version>1.8.7</aspectjweaver.version>
         <!-- servlet-api版本 -->
         <servlet-api.version>2.5</servlet-api.version>
+        <!-- mysql-connector-java版本 -->
+        <mysql-connector-java.version>5.1.37</mysql-connector-java.version>
+        <!-- commons-dbcp版本 -->
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+        <!-- mybatis-spring版本 -->
+        <mybatis-spring.version>1.2.3</mybatis-spring.version>
+        <!-- mybatis版本 -->
+        <mybatis.version>3.3.0</mybatis.version>
 	</properties>
 	<dependencies>
 		<!-- junit单元测试 -->
@@ -81,6 +89,43 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>${servlet-api.version}</version>
+        </dependency>
+        <!-- mysql-connector-java -->
+        <!-- mysql-connector-java-5.1.37.jar -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
+        </dependency>
+        <!-- commons-dbcp -->
+        <!-- commons-dbcp-1.4.jar -->
+        <!-- commons-pool-1.5.4.jar -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons-dbcp.version}</version>
+        </dependency>
+        <!-- mybatis-spring -->
+        <!-- mybatis-spring-1.2.3.jar -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${mybatis-spring.version}</version>
+        </dependency>
+        <!-- mybatis -->
+        <!-- mybatis-3.3.0.jar -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <!-- spring-jdbc -->
+        <!-- spring-jdbc-4.2.3.RELEASE.jar -->
+        <!-- spring-tx-4.2.3.RELEASE.jar -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
 	</dependencies>
 	<build>
