--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/webapp
+db.url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterEncoding=utf8
 db.user=root
 db.password=password
